amélioration des contrastes dans les textes qui sont sur une image, changement de couleurs des boutons, suppression des liens non pertinents dans le footer, correction des balises alt

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1784,7 +1784,7 @@ a.bg-danger:hover {
 
 ol,
 ul {
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 10px
 }
 
@@ -7682,7 +7682,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000 \9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
