--- a/style.css
+++ b/style.css
@@ -4,15 +4,23 @@
     font-size: 24px;
 }
 
+.col-sm-4 {
+    font-size: 14px;
+  
+}
+
+.image-resize-mode {
+    width: 28%;
+}
 .col-xs-12 {
     font-size: 24px;
     font-style: italic;
     text-align: center;
+    color: white;
 }
 
 .quote {
     font-size: 24px;
-    
 }
 
 .quote--name {
@@ -29,6 +37,17 @@ button {
     border: none;
     width: 100%;
 }
+
+body {
+    font-family: "firasans";
+}
+
+
+@font-face {
+    font-family: "firasans";
+    src: url("fonts/FiraSans-Light.otf") format("otf"), url("fonts/FiraSans-Regular.otf");
+}
+
 /* Ajout de ma part */
 body {
     margin: 0;
@@ -43,6 +62,7 @@ a,
 button {
     transition: all .3s ease-in-out;
     outline: none!important;
+    color: #FFF;
 }
 
 a:hover {
@@ -316,7 +336,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 38px;
 }
 
 .navbar {
@@ -570,7 +590,7 @@ a[data-lightbox] {
 
 a[data-lightbox]:hover::before {
     content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-family: "firasans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -679,11 +699,15 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
-    font-family: "helvetica";
+.btn
+{
+    font-family: "firasans", "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+a {
+    color: #FFF;
 }
 
 .container {
@@ -726,14 +750,15 @@ p {
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
+    padding: 16px 32px 16px 32px;
+    font-size: 18px;
     font-weight: 700;
 }
 
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    margin-bottom: 20px;
 }
 
 h2 {
@@ -785,8 +810,10 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #C53730;
     padding: 40px 40px 40px 40px;
+    opacity: 0.8;
+    border-radius: 3%;
 }
 
 .bold-link {
@@ -803,20 +830,22 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color:#ac1d14;
+    opacity: 0.75;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #C53730;
+    opacity: 0.6;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    filter: brightness(1.25);
     color: #FFFFFF!important;
 }
 
@@ -851,6 +880,7 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/la-chouette-agence-banniere-min.jpg");
+    filter: contrast(1.25);
 }
 
 .bg-presentation {
